--- a/index.html
+++ b/index.html
@@ -3,56 +3,57 @@
 <head>
   <meta charset="utf-8" />
 
-  <!-- Viewport & Safe Area Settings -->
+  <!-- Viewport & Safe Area -->
   <meta name="viewport"
-        content="width=device-width, initial-scale=1, viewport-fit=cover" />
+        content="width=device-width, initial-scale=1, viewport-fit=cover">
 
   <title>Pullgress</title>
 
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="/manifest.webmanifest" />
-  <meta name="theme-color" content="#0B0D10" />
+  <!-- PWA manifest -->
+  <link rel="manifest" href="/manifest.webmanifest">
+  <meta name="theme-color" content="#0B0D10">
 
-  <!-- iOS Fullscreen Settings -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Pullgress" />
-  <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+  <!-- iOS fullscreen settings -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Pullgress">
+  <link rel="apple-touch-icon" href="/icons/icon-192.png">
 
   <style>
+    /* --- GLOBAL BACKGROUND --- */
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      background-color: #0B0D10;
+      width: 100%;
+      background-color: #0B0D10;   /* same colour as app background */
       color-scheme: dark;
     }
 
-    /* ✅ Final fullscreen fix */
+    /* --- TRUE SAFE-AREA FIT --- */
     body {
       position: fixed;
       inset: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: #0B0D10;
-      padding-bottom: env(safe-area-inset-bottom);
       overflow: hidden;
+      background-color: #0B0D10;
     }
 
     iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: calc(100% + env(safe-area-inset-bottom));
+      position: fixed;
+      top: env(safe-area-inset-top);
+      left: env(safe-area-inset-left);
+      right: env(safe-area-inset-right);
+      bottom: env(safe-area-inset-bottom);
+      width: auto;
+      height: auto;
       border: none;
       background-color: #0B0D10;
     }
 
-    /* Optional: fallback background before iframe loads */
+    /* Optional loading fallback */
     body::before {
       content: "";
-      position: absolute;
+      position: fixed;
       inset: 0;
       background-color: #0B0D10;
     }
@@ -60,19 +61,19 @@
 </head>
 
 <body>
+  <!-- Replace the src with your own Figma prototype if needed -->
   <iframe
     src="https://stony-free-16072418.figma.site"
     allow="fullscreen; autoplay"
     referrerpolicy="no-referrer"
-    loading="eager"
-  ></iframe>
+    loading="eager">
+  </iframe>
 
   <script>
-    // Register service worker for offline/PWA behavior
+    // Register service worker for PWA functionality
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js').catch(err => {
-        console.warn('Service worker registration failed:', err);
-      });
+      navigator.serviceWorker.register('/sw.js')
+        .catch(err => console.warn('Service worker registration failed:', err));
     }
   </script>
 </body>
