--- a/index.html
+++ b/index.html
@@ -2,66 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-
-  <!-- Viewport & Safe Area -->
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1, viewport-fit=cover">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Pullgress</title>
 
-  <!-- PWA manifest -->
-  <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#0B0D10">
+  <!-- PWA -->
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <meta name="theme-color" content="#0B0D10" />
 
-  <!-- iOS fullscreen settings -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Pullgress">
-  <link rel="apple-touch-icon" href="/icons/icon-192.png">
+  <!-- iOS standalone -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="Pullgress" />
+  <link rel="apple-touch-icon" href="/icons/icon-192.png" />
 
   <style>
-    /* --- GLOBAL BACKGROUND --- */
+    :root{
+      /* Safe-area with fallbacks so desktop/browsers don’t break */
+      --sat: env(safe-area-inset-top, 0px);
+      --sar: env(safe-area-inset-right, 0px);
+      --sab: env(safe-area-inset-bottom, 0px);
+      --sal: env(safe-area-inset-left, 0px);
+      --bg: #0B0D10;
+    }
+
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       width: 100%;
-      background-color: #0B0D10;   /* same colour as app background */
+      background: var(--bg);
       color-scheme: dark;
     }
 
-    /* --- TRUE SAFE-AREA FIT --- */
+    /* Default (browser/tab) — fill the visible viewport */
     body {
       position: fixed;
       inset: 0;
       overflow: hidden;
-      background-color: #0B0D10;
+      background: var(--bg);
     }
 
     iframe {
       position: fixed;
-      top: env(safe-area-inset-top);
-      left: env(safe-area-inset-left);
-      right: env(safe-area-inset-right);
-      bottom: env(safe-area-inset-bottom);
-      width: auto;
-      height: auto;
-      border: none;
-      background-color: #0B0D10;
+      inset: 0;                 /* fill whole viewport in browser mode */
+      width: 100%;
+      height: 100%;
+      border: 0;
+      background: var(--bg);
+      display: block;
     }
 
-    /* Optional loading fallback */
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background-color: #0B0D10;
+    /* Standalone/PWA mode — respect safe areas */
+    .standalone iframe {
+      top: var(--sat);
+      right: var(--sar);
+      bottom: var(--sab);
+      left: var(--sal);
+      width: auto;
+      height: auto;
     }
   </style>
 </head>
-
 <body>
-  <!-- Replace the src with your own Figma prototype if needed -->
+  <!-- Tip: if the figma.site URL refuses to embed, use your prototype EMBED link instead -->
   <iframe
     src="https://stony-free-16072418.figma.site"
     allow="fullscreen; autoplay"
@@ -70,10 +73,18 @@
   </iframe>
 
   <script>
-    // Register service worker for PWA functionality
+    // Mark body as 'standalone' when installed so CSS switches to safe-area sizing
+    const isStandalone =
+      window.matchMedia('(display-mode: standalone)').matches ||
+      window.navigator.standalone === true; // iOS Safari
+
+    if (isStandalone) {
+      document.body.classList.add('standalone');
+    }
+
+    // Register SW (optional but recommended)
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
-        .catch(err => console.warn('Service worker registration failed:', err));
+      navigator.serviceWorker.register('/sw.js').catch(()=>{});
     }
   </script>
 </body>
