--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
   <style>
     :root{
-      /* Safe-area with fallbacks */
+      /* safe-areas (0 in normal browser) */
       --sat: env(safe-area-inset-top, 0px);
       --sar: env(safe-area-inset-right, 0px);
       --sab: env(safe-area-inset-bottom, 0px);
       --sal: env(safe-area-inset-left, 0px);
-      --bg: #0B0D10;
+      --bg: #0B0D10; /* body/edge background if anything shows */
     }
 
     html, body {
@@ -32,9 +32,10 @@
       width: 100%;
       background: var(--bg);
       color-scheme: dark;
+      overscroll-behavior: none;
     }
 
-    /* Fill the visual viewport; avoid scroll/bounce */
+    /* Base: fill viewport and prevent bounce */
     body {
       position: fixed;
       inset: 0;
@@ -42,43 +43,42 @@
       background: var(--bg);
     }
 
-    /* Wrapper: safe-area top/left/right; bottom will be toggled */
+    /* Wrapper fills viewport */
     .app {
       position: fixed;
       inset: 0;
-      /* use dynamic viewport where available */
-      height: 100vh;
-      height: 100dvh;
       width: 100vw;
+      height: 100vh;   /* fallback */
+      height: 100svh;  /* small viewport on iOS 16+ */
+      height: 100dvh;  /* dynamic viewport on modern browsers */
+      box-sizing: border-box;
 
+      /* Browser/tab mode: keep safe-area so toolbars don’t overlap */
       padding-top: var(--sat);
       padding-right: var(--sar);
-      padding-left: var(--sal);
-      /* default in browser: keep bottom padding so nothing hides behind toolbars */
       padding-bottom: var(--sab);
-
-      box-sizing: border-box;
+      padding-left: var(--sal);
       background: transparent;
     }
 
-    /* Standalone PWA: remove bottom padding for edge-to-edge */
+    /* Standalone PWA: edge-to-edge (no padding top/bottom/left/right) */
     .edge .app {
-      padding-bottom: 0; /* content can render under home indicator */
+      padding: 0;
     }
 
-    /* Iframe fills the wrapper */
+    /* Iframe fills wrapper */
     .app > iframe {
       width: 100%;
       height: 100%;
       border: 0;
       display: block;
-      background: transparent; /* don’t add extra dark behind light figma bg */
+      background: transparent; /* don’t show a dark fill behind light Figma bg */
     }
   </style>
 </head>
 <body>
   <div class="app">
-    <!-- If figma.site doesn’t embed, switch to the Prototype EMBED url -->
+    <!-- If figma.site blocks iframe, swap to the Prototype EMBED url -->
     <iframe
       src="https://stony-free-16072418.figma.site"
       allow="fullscreen; autoplay"
@@ -88,16 +88,15 @@
   </div>
 
   <script>
-    // Detect installed (standalone) mode and enable edge-to-edge
+    // Detect installed mode and enable edge-to-edge (no safe-area padding)
     const isStandalone =
       window.matchMedia('(display-mode: standalone)').matches ||
-      window.navigator.standalone === true; // iOS
+      window.navigator.standalone === true; // iOS Safari
 
     if (isStandalone) {
       document.body.classList.add('edge');
     }
 
-    // Register service worker
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/sw.js').catch(()=>{});
     }
